--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@googlemaps/code-assist-mcp",
   "version": "0.1.1",
-  "main": "index.js",
+  "main": "index.cjs",
   "type": "module",
   "bin": {
-    "google-maps-platform-code-assist": "index.js"
+    "google-maps-platform-code-assist": "index.cjs"
   },
   "scripts": {
     "clean": "rm -rf dist",
