--- a/package.json
+++ b/package.json
@@ -1,39 +1,25 @@
 {
-  "name": "@googlemaps/code-assist-mcp",
-  "version": "0.1.1",
-  "main": "dist/index.cjs",
-  "type": "module",
-  "bin": {
-    "google-maps-platform-code-assist": "dist/index.cjs"
+  "name": "google-maps-platform-ai",
+  "version": "0.1.0",
+  "private": true,
+  "workspaces": ["packages/code-assist"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/googlemaps/platform-ai.git"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://wombat-dressing-room.appspot.com"
   },
   "scripts": {
-    "clean": "rm -rf dist",
-    "compile": "tsc index.ts && shx chmod +x dist/*.js",
-    "start": "node dist/index.js",
-    "build": "bun clean && bun build index.ts --outdir dist --target=node",
-    "build:prepare": "bun clean && bun build index.ts --outdir dist --target=node --format=cjs --minify && echo '{\"type\": \"commonjs\"}' > dist/package.json && cp README.md dist",
-    "build:dist": "npm run build:prepare && zip -r dist_$(date +%Y%m%d).zip dist",
-    "prepack": "npm run build:prepare",
-    "test": "bun test tests/unit.test.ts",
-    "test:integration": "bun test tests/integration.test.ts"
+    "test": "true",
+    "test:integration": "true",
+    "build": "true",
+    "lint": "true",
+    "clean": "true",
+    "publish": "true"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@google-cloud/vertexai": "^1.10.0",
-    "@modelcontextprotocol/sdk": "^1.11.3",
-    "@types/node": "^22.15.18",
-    "axios": "1.9.0",
-    "google-auth-library": "^9.15.1",
-    "shx": "^0.4.0",
-    "typescript": "^5.8.3"
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "bun": "1.2.18"
-  }
+  "type": "commonjs"
 }
