--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "workspaces": ["packages/code-assist"],
+  "main": "dist/index.cjs",
+  "bin": {
+    "google-maps-platform-code-assist": "dist/index.cjs"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/googlemaps/platform-ai.git"
